Fix jumping while opening/closing
Jumping occured when "html" and "body" tags had "height: 100%" and html
had "overflow-y: auto;"

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -1,5 +1,9 @@
 .fancybox-enabled {
 	overflow: hidden;
+}
+
+.fancybox-enabled body {
+	overflow: visible;
 	touch-action: none;
 }
 
